--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,26 +1,16 @@
 @import "tailwindcss";
 
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
-}
+@layer components {
 
-@theme inline {
-  --color-background: var(--background);
-  --color-foreground: var(--foreground);
-  --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
+  .button-primary {
+    @apply bg-red-500 text-white font-bold rounded-2xl py-4 px-8 text-2xl 
   }
-}
 
-body {
-  background: var(--background);
-  color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+  .button-secondary {
+    @apply bg-red-500 text-white font-bold rounded-xl py-2 px-4 text-2xl 
+  }
+
+  .button-tertiary {
+    @apply bg-gray-600 text-white font-bold rounded-xl p-2 text-2xl 
+  }
 }
