--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -18,9 +18,11 @@ body {
   .button-tertiary {
     @apply text-[#222] font-bold rounded-xl p-2 text-2xl border-1 border-[#222] bg-[#DFB97C] cursor-pointer
   }
- .border-gold {
-    @apply  border-[#DFB97C] border
+
+  .border-gold {
+    @apply border-[#DFB97C] border
   }
+
   .background-gold {
     background-color: #DFB97C;
 
@@ -31,5 +33,21 @@ body {
 
   .background-dark {
     background-color: #222;
+  } 
+
+  .selectionFix {
+   
+    option {
+      &:hover {
+        background-color: #DFB97C !important;
+        color: #222 !important;    
+      }
+
+      &:checked {
+        background-color: #DFB97C;
+        color: #222;  
+      }
+    }
   }
+
 }
